--- a/templates/detail.html
+++ b/templates/detail.html
@@ -112,7 +112,8 @@
                 </div>
             {% endfor %}
         </div>
-        <script src="{{ url_for('static', filename='/js/script.js') }}"></script>
-    </div>
+    <script src="{{ url_for('static', filename='/js/script.js') }}"></script>
+    <div class="footer"></div>
+</div>
 </body>
 </html>
