--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10,6 +10,9 @@ body {
 }
 
 .main-header {
+    position:fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -47,6 +50,7 @@ body {
     background: linear-gradient(to bottom, #0068be, #00b8be);
     color: white;
     padding: 50px;
+    margin-top: 50px;
 
 }
 
@@ -64,7 +68,7 @@ body {
     font-size: 20px;
 }
 
-.subtitle {
+.subtitle_main {
     font-size: 22px;
     font-weight: 600;
 }
@@ -137,7 +141,7 @@ body {
 }
 
 .toprank-detail {
-    height: 50px;
+    height: 40px;
     display: flex;
     font-size: 25px;
     margin-top: 10px;
@@ -157,6 +161,7 @@ body {
 
 .toprank-btn-wrap {
     width: 20%;
+    display: flex;
 }
 
 .webtoon-all-list {
@@ -199,6 +204,7 @@ body {
 
 .likes like-btn {
     width: 100%;
+    margin-bottom: 10px;
 }
 
 .likes dislike-btn {
@@ -209,22 +215,7 @@ body {
     width: 100%;
 }
 
-.sample_image  img {
-    -webkit-transform:scale(1);
-    -moz-transform:scale(1);
-    -ms-transform:scale(1);
-    -o-transform:scale(1);
-    transform:scale(1);
-    -webkit-transition:.3s;
-    -moz-transition:.3s;
-    -ms-transition:.3s;
-    -o-transition:.3s;
-    transition:.3s;
-}
-.sample_image:hover img {
-    -webkit-transform:scale(1.2);
-    -moz-transform:scale(1.2);
-    -ms-transform:scale(1.2);
-    -o-transform:scale(1.2);
-    transform:scale(1.2);
+.footer {
+    margin-top: 10px;
+    height: 50px;
 }
