OTV_subtitle_수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
     </div>
 
     <article class="webtoon-best">
-        <h2 class="subtitle">오늘의 웹툰 <span class="best-word">베스트</span> TOP 3!</h2>
+        <h2 class="subtitle_main">오늘의 웹툰 <span class="best-word">베스트</span> TOP 3!</h2>
         <hr class="subtitle-line">
         <ul class="toprank-list">
             {% for i in range(3) %}
@@ -85,7 +85,7 @@
     </article>
 
     <article class="webtoon-all">
-        <h2 class="subtitle">모든 웹툰</h2>
+        <h2 class="subtitle_main">모든 웹툰</h2>
         <hr class="subtitle-line">
         <ul class="webtoon-all-list">
             {% for j in range(3,webtoons|length) %}
