OTV_댓글 삭제버튼 이벤트(onclick)이 사라져서 다시 입력

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -86,7 +86,7 @@
                     <div class="review-card">
                         <span class="review-name"><strong>{{ nickname }}</strong></span>
                         <p class="review-text">{{ comment }}</p>
-                        <button class="delete" type="button"></button>
+                        <button onclick="deleteReview('{{ review_id }}')" class="delete" type="button"></button>
                     </div>
                 </div>
             {% endfor %}
