--- a/templates/detail.html
+++ b/templates/detail.html
@@ -52,6 +52,7 @@
                             </button>
                         {% endif %}
                     </div>
+                    <div><a href="{{ webtoon['url'] }}"><button class="button">보러가기</button></a></div>
                 </div>
             </div>
             <div class="detail">
