--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -88,7 +88,7 @@
     width: 300px;
     height: 240px;
 }
-.title-box {
+.title-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
