--- a/templates/detail.html
+++ b/templates/detail.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="detail">
-                <div class="title-box">
+                <div class="title-container">
                     <div class="title-detail">{{ webtoon['title'] }}</div>
                 </div>
                 <div class="sub-container">
