OTV_본인이 작성한 리뷰만 삭제할 수 있는 기능 추가

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -87,7 +87,11 @@
                     <div class="review-card">
                         <span class="review-name"><strong>{{ nickname }}</strong></span>
                         <p class="review-text">{{ comment }}</p>
-                        <button onclick="deleteReview('{{ review_id }}')" class="delete" type="button"></button>
+                        {% if review['accessible'] == 'true' %}
+                            <button onclick="deleteReview('{{ review_id }}')" class="delete" type="button"></button>
+                        {% else %}
+                            <button onclick="deleteReview('{{ review_id }}')" class="delete is-hidden" type="button"></button>
+                        {% endif %}
                     </div>
                 </div>
             {% endfor %}
