--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,24 +13,31 @@ body {
     position:fixed;
     top: 0;
     left: 0;
+    max-width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 0px 0px 10px 0px;
-    background-color: white;
+    z-index: 99;
+    padding-bottom: 10px;
+
+}
+.check-status {
+    display: flex;
+    justify-content: flex-end;
 }
 
-.main-header .my-info {
-    display: flex;
-    align-items: center;
-    margin-top: 15px;
-}
+
+/*.main-header .my-info {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    margin-top: 15px;*/
+/*}*/
 
 .logout-btn{
     background-color: #0068be;
     color: white;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 5px;
     transition: background-color .5s;
     margin-left: 20px
@@ -104,19 +111,19 @@ body {
     -ms-transform:scale(1);
     -o-transform:scale(1);
     transform:scale(1);
-    -webkit-transition:.3s;
-    -moz-transition:.3s;
-    -ms-transition:.3s;
-    -o-transition:.3s;
-    transition:.3s;
+    -webkit-transition:.5s;
+    -moz-transition:.5s;
+    -ms-transition:.5s;
+    -o-transition:.5s;
+    transition:.5s;
 }
 
 .toprank-item:hover{
-    -webkit-transform:scale(1.1);
-    -moz-transform:scale(1.1);
-    -ms-transform:scale(1.1);
-    -o-transform:scale(1.1);
-    transform:scale(1.1);
+    -webkit-transform:scale(1.03);
+    -moz-transform:scale(1.03);
+    -ms-transform:scale(1.03);
+    -o-transform:scale(1.03);
+    transform:scale(1.03);
 }
 
 .webtoon-all-item {
@@ -130,7 +137,7 @@ body {
 
 .toprank-list {
     display: flex;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
     justify-content: center;
     align-content: center;
     gap: 20px;
@@ -156,11 +163,15 @@ body {
 }
 
 .toprank-title {
-    width: 80%;
+    width: 70%;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .toprank-btn-wrap {
-    width: 20%;
+    width: 30%;
     display: flex;
 }
 
@@ -191,11 +202,13 @@ body {
 }
 
 .webtoon-title {
-    width: 150px;
+    width: 140px;
     display: block;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    font-size: 18px;
+    padding-bottom: 10px;
 }
 
 .likes-btn-wrap {
@@ -204,15 +217,17 @@ body {
 
 .likes like-btn {
     width: 100%;
-    margin-bottom: 10px;
+    margin: 0px 10px 0px 10px;
 }
 
 .likes dislike-btn {
     width: 100%;
+    margin-bottom: 0px 10px 0px 10px;
 }
 
 .likes-count {
-    width: 100%;
+    diplay: block
+    padding: 10px;
 }
 
 .footer {
