OTV_detail애니메이션

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -53,7 +53,7 @@
                         {% endif %}
                     <div class="likes-text">× <span class="likes-count" data-num={{ webtoon['id'] }}>{{ webtoon['likes'] }}</span></div>
                     </div>
-                    <div><a href="{{ webtoon['url'] }}"><button class="button">보러가기</button></a></div>
+                    <div><a href="{{ webtoon['url'] }}"><button class="btn-to-toon">보러가기</button></a></div>
                 </div>
             </div>
             <div class="detail">
@@ -75,7 +75,7 @@
                               placeholder="내용을 입력해주세요."></textarea>
                 </div>
                 <div class="btn-container">
-                    <button class="form-btn" type="submit">제출</button>
+                    <button class="form-btn" type="submit">제 출</button>
                 </div>
             </form>
         </div>
