--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -44,6 +44,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 .likes-box {
     width: 100px;
@@ -156,10 +157,11 @@
     align-items: center;
     justify-content: space-between;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 4px, rgba(0, 0, 0, 0.10) 0px 3px 3px;
+    transition: height 250ms linear;
 }
 .review-card:hover {
-    /*height: 95%;*/
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    height: 99%;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 7px 14px, rgba(0, 0, 0, 0.22) 0px 5px 5px;
 }
 .form,
 .review-card {
@@ -183,21 +185,27 @@
     width: 100%;
     height: 70px;
     padding: 0px;
-    background-color: #e3f2fd;
+    background-color: #fff;
     border-radius: 5px;
     var(--fond-size-md);
+    transition: background-color 200ms linear;
+}
+.textarea:hover {
+    background-color: #e3f2fd;
 }
 .form-btn {
     width: 100px;
     height: 74px;
-    background-color: #1e6bcb;
+    background-color: #5793d3;
     border-radius: 10px;
     color: #fff;
     margin: 36px 0px 10px;
-    font-size: 20px;
+    font-size: 17px;
+    transition: background-color 400ms linear;
 }
 .form-btn:hover {
-    background-color: #6498ff;
+    background-color: #dae7ef;
+    color: #3f484b;
 }
 
 /*----------------------------------------*/
@@ -226,6 +234,33 @@
     font-size: 30px;
     color: #003770;
 }
-.button {
+.btn-to-toon {
+    margin-left: 10px;
     height: 32px;
+    border: 1px solid #8aacc8;
+    border-radius: 10px;
+    color: #455a64;
+    font-size: 16px;
+    background-color: #fff;
+    /*text-decoration: none;*/
+    transition: background-color 400ms linear;
 }
+.btn-to-toon:hover {
+    background-color: #82b3c9;
+    color: white;
+
+}
+/*.home-btn {*/
+/*    margin: 0 10px;*/
+/*    padding: 15px 25px;*/
+/*    border: 2px solid white;*/
+/*    color: white;*/
+/*    font-weight: 600;*/
+/*    text-decoration: none;*/
+/*    transition: background-color 400ms linear;*/
+/*}*/
+
+/*.home-btn:hover {*/
+/*    color: var(--main-color);*/
+/*    background-color: white;*/
+/*}*/
