--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,39 +15,46 @@ body {
     left: 0;
     max-width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
     z-index: 99;
-    padding-bottom: 10px;
-
-}
-.check-status {
-    display: flex;
-    justify-content: flex-end;
-}
-
-
-/*.main-header .my-info {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    margin-top: 15px;*/
-/*}*/
-
-.logout-btn{
+    width: 100%;
+    height: 100px;
     background-color: #0068be;
     color: white;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-header-box{
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.home-button {
+    display: flex;
+
+}
+
+.check-status {
+     display: flex;
+}
+
+
+.logout-btn{
+    background-color: white;
+    color: #1e6bcb;
     border-radius: 5px;
     padding: 5px;
     transition: background-color .5s;
-    margin-left: 20px
+    margin-left: 20px;
+    font-weight: 600;
 }
 
 .logout-btn:hover{
-    background-color: crimson;
+    background-color: lightblue;
 }
-
-
 
 .title-box-main {
     display: flex;
@@ -58,12 +65,6 @@ body {
     color: white;
     padding: 50px;
     margin-top: 50px;
-
-}
-
-.title-text,
-.title-description {
-    text-align: center;
 }
 
 .title-text {
@@ -73,6 +74,8 @@ body {
 
 .title-description {
     font-size: 20px;
+    display: flex;
+    align-items: flex-end;
 }
 
 .subtitle_main {
@@ -88,7 +91,7 @@ body {
 
 .webtoon-best,
 .webtoon-all {
-    padding-top: 50px;
+    padding-top: 130px;
 }
 .best-word {
     transition: color .5s;
