--- a/templates/index.html
+++ b/templates/index.html
@@ -36,24 +36,26 @@
 
 <div class="container">
     <div class="main-header">
-{#        <div>#}
-{#            <h1 class="title-text">#}
-{#                오툰뷰#}
-{#            </h1>#}
-{#        <span class="title-description">오늘의 웹툰 리뷰</span>#}
-{#        </div>#}
-{#        <div class="check-status">#}
-            <p class="my-info">{{ user_info['nick-name'] }}님 환영합니다.</p>
-            <button onclick="sign_out()" type="button" class='logout-btn'>로그아웃</button>
-{#        </div>#}
+        <div class="main-header-box">
+            <div class="home-button">
+                <h1 class="title-text">
+                    오툰뷰
+                </h1>
+            <span class="title-description">오늘의 웹툰 리뷰</span>
+            </div>
+            <div class="check-status">
+                <p class="my-info">{{ user_info['nick-name'] }}님 환영합니다.</p>
+                <button onclick="sign_out()" type="button" class='logout-btn'>로그아웃</button>
+            </div>
+        </div>
     </div>
 
-    <div class="title-box-main">
-        <h1 class="title-text">
-            오툰뷰
-        </h1>
-        <span class="title-description">오늘의 웹툰 리뷰</span>
-    </div>
+{#    <div class="title-box-main">#}
+{#        <h1 class="title-text">#}
+{#            오툰뷰#}
+{#        </h1>#}
+{#        <span class="title-description">:오늘의 웹툰 리뷰</span>#}
+{#    </div>#}
 
     <article class="webtoon-best">
         <h2 class="subtitle_main">오늘의 웹툰 <span class="best-word">베스트</span> TOP 3!</h2>
