--- a/templates/detail.html
+++ b/templates/detail.html
@@ -26,8 +26,18 @@
 
 <div class="container">
     <div class="main-header">
-        <p class="my-info">{{ user_info['nickname'] }}님 환영합니다.</p>
-        <button onclick="sign_out()" type="button" class="logout-btn">로그아웃</button>
+        <div class="main-header-box">
+            <div class="home-button">
+                <h1 class="title-text">
+                    오툰뷰
+                </h1>
+            <span class="title-description">오늘의 웹툰 리뷰</span>
+            </div>
+            <div class="check-status">
+                <p class="my-info">{{ user_info['nickname'] }}님 환영합니다.</p>
+                <button onclick="sign_out()" type="button" class='logout-btn'>로그아웃</button>
+            </div>
+        </div>
     </div>
 
     <div class="wrap">
