--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
             <span class="title-description">오늘의 웹툰 리뷰</span>
             </div>
             <div class="check-status">
-                <p class="my-info">{{ user_info['nick-name'] }}님 환영합니다.</p>
+                <p class="my-info">{{ user_info['nickname'] }}님 환영합니다.</p>
                 <button onclick="sign_out()" type="button" class='logout-btn'>로그아웃</button>
             </div>
         </div>
