OTV_스타일 수정

--- a/static/css/constant.css
+++ b/static/css/constant.css
@@ -4,5 +4,6 @@
     --font-size-lg: 24px;
     --font-size-title: 36px;
     --main-color: #0068be;
+    --dark-blue: #0065B8;
     --shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
