--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,11 @@
     <div class="main-header">
         <div class="main-header-box">
             <div class="home-button">
-                <h1 class="title-text">
-                    오툰뷰
-                </h1>
+                <a href="/main">
+                    <h1 class="title-text">
+                        오툰뷰
+                    </h1>
+                </a>
             <span class="title-description">오늘의 웹툰 리뷰</span>
             </div>
             <div class="check-status">
@@ -49,13 +51,6 @@
             </div>
         </div>
     </div>
-
-{#    <div class="title-box-main">#}
-{#        <h1 class="title-text">#}
-{#            오툰뷰#}
-{#        </h1>#}
-{#        <span class="title-description">:오늘의 웹툰 리뷰</span>#}
-{#    </div>#}
 
     <article class="webtoon-best">
         <h2 class="subtitle_main">오늘의 웹툰 <span class="best-word">베스트</span> TOP 3!</h2>
