--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,5 @@
 body {
     width: 100%;
-
 }
 
 .container {
@@ -22,6 +21,7 @@ body {
     color: white;
     align-items: center;
     justify-content: center;
+    padding: 0 40px;
 }
 
 .main-header-box{
@@ -68,6 +68,7 @@ body {
 }
 
 .title-text {
+    color: white;
     font-size: 40px;
     font-weight: 600;
 }
@@ -76,6 +77,7 @@ body {
     font-size: 20px;
     display: flex;
     align-items: flex-end;
+    margin-left: 10px;
 }
 
 .subtitle_main {
@@ -100,6 +102,20 @@ body {
 .best-word:hover {
     color: #0068be;
 
+}
+
+@media (max-width: 768px) {
+    .title-text {
+        font-size: 28px;
+    }
+
+    .title-description {
+        display: none;
+    }
+
+    .my-info {
+        font-size: 14px;
+    }
 }
 
 
@@ -151,10 +167,11 @@ body {
 }
 
 .toprank-detail {
-    height: 40px;
     display: flex;
-    font-size: 25px;
+    align-items: center;
+    height: 40px;
     margin-top: 10px;
+    font-size: 25px;
 }
 
 .ico-best {
@@ -200,9 +217,11 @@ body {
 }
 
 .webtoon-all-detail {
-    width: 100%;
     display: flex;
-    margin-top: 10px;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0;
+    padding-left: 10px;
 }
 
 .webtoon-title {
@@ -212,7 +231,6 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
     font-size: 18px;
-    padding-bottom: 10px;
 }
 
 .likes-btn-wrap {
