--- a/templates/detail.html
+++ b/templates/detail.html
@@ -28,9 +28,11 @@
     <div class="main-header">
         <div class="main-header-box">
             <div class="home-button">
-                <h1 class="title-text">
-                    오툰뷰
-                </h1>
+                <a href="/main">
+                    <h1 class="title-text">
+                        오툰뷰
+                    </h1>
+                </a>
             <span class="title-description">오늘의 웹툰 리뷰</span>
             </div>
             <div class="check-status">
