--- a/templates/detail.html
+++ b/templates/detail.html
@@ -87,7 +87,7 @@
                               placeholder="내용을 입력해주세요."></textarea>
                 </div>
                 <div class="btn-container">
-                    <button class="form-btn" type="submit">제출</button>
+                    <button class="form-btn" type="submit">남기기!</button>
                 </div>
             </form>
         </div>
